Fix online on mobile backdrop

--- a/LargePFP.theme.css
+++ b/LargePFP.theme.css
@@ -57,3 +57,8 @@
 	display: none;
 }
 
+/* Fix online on mobile backdrop */
+[class^=userPopoutOuter_] [fill=black][style="opacity: 0.45;"] {
+  display: none;
+}
+
